--- a/webservice/templates/show_campaigns.html
+++ b/webservice/templates/show_campaigns.html
@@ -140,7 +140,7 @@ Campaign Stages{%include 'help_button.html'%}
       <div class="ui hidden divider"></div>
     </form>
     <div class="actions">
-        <div class="ui button">OK</div>
+        <div class="ui button close">Close</div>
     </div>
 </div> <!-- Ends Modal -->
 
