--- a/webservice/templates/show_campaigns.html
+++ b/webservice/templates/show_campaigns.html
@@ -142,8 +142,15 @@ Campaign Stages{%include 'help_button.html'%}
     </form>
     <div class="actions">
         <!-- <div class="ui button">Close</div> -->
-        <input type="submit" class="ui teal button" value="Close">
+        <input type="submit" class="ui teal button approve" value="Close">
     </div>
+    <!--
+    <div class="actions">
+        <div class="ui approve button">Approve</div>
+        <div class="ui button">Neutral</div>
+        <div class="ui cancel button">Cancel</div>
+    </div>
+    -->
 </div> <!-- Ends Modal -->
 
   <script>
