--- a/webservice/templates/show_campaigns.html
+++ b/webservice/templates/show_campaigns.html
@@ -108,7 +108,7 @@ Campaign Stages{%include 'help_button.html'%}
     <div class="header">
     </div>
     <!-- <form class="ui form" action="tag_untag_campaigns" method="GET"> -->
-    <form class="ui form" action="#" method="GET">
+    <form class="ui form" action="" method="GET">
         <div class="field">
             <input type="hidden" id="tag_campaign_ids" name="cl" readonly>
             <span style="font-size: 1.3em;">Tag/untag selected campaigns...</span>
