--- a/webservice/templates/show_campaigns.html
+++ b/webservice/templates/show_campaigns.html
@@ -142,7 +142,7 @@ Campaign Stages{%include 'help_button.html'%}
     </form>
     <div class="actions">
         <!-- <div class="ui button">Close</div> -->
-        <input type="submit" class="ui teal button approve" value="Close">
+        <input type="submit" class="ui teal button approve" value="Close" onclick="return localtion.reload();">
     </div>
     <!--
     <div class="actions">
