--- a/webservice/templates/show_campaigns.html
+++ b/webservice/templates/show_campaigns.html
@@ -248,10 +248,10 @@ Campaign Stages{%include 'help_button.html'%}
                 for (const tag of data.result) {
                     const [tag_id, tag_name] = tag
                     const cids = csv.join('c')
-                    var new_tag = `<a href="{{pomspath}}/search_tags?q=${tag_name}" class="ui blue tag label" id="${cids}_${tag_id}_">${tag_name}</a>`;
-                    var new_trash_can = `<i class="trash outline icon link poms_tag" id="${cids}_${tag_id}"></i>`;
-                    $('#tag_container').append(new_trash_can);
-                    $('#tag_container').append(new_tag);
+                    const new_trash_can = `<div><i class="trash outline icon link poms_tag" id="${cids}_${tag_id}"></i>`;
+                    const new_tag = `<a href="{{pomspath}}/search_tags?q=${tag_name}" class="ui blue tag label" id="${cids}_${tag_id}_">${tag_name}</a></div>`;
+                    $('#tag_container').append(new_trash_can + new_tag);
+                    //$('#tag_container').append(new_tag);
                     add_click_handler();
                 }
             }
