--- a/webservice/templates/show_campaigns.html
+++ b/webservice/templates/show_campaigns.html
@@ -248,9 +248,9 @@ Campaign Stages{%include 'help_button.html'%}
                 for (const tag of data.result) {
                     const [tag_id, tag_name] = tag
                     const cids = csv.join('c')
-                    const new_trash_can = `<span><i class="trash outline icon link poms_tag" id="${cids}_${tag_id}"></i>`;
-                    const new_tag = `<a href="{{pomspath}}/search_tags?q=${tag_name}" class="ui blue tag label" id="${cids}_${tag_id}_">${tag_name}</a></span>`;
-                    $('#tag_container').append(new_trash_can + new_tag);
+                    const new_tag = `<span><a href="{{pomspath}}/search_tags?q=${tag_name}" class="ui blue tag label" id="${cids}_${tag_id}_">${tag_name}</a>`;
+                    const new_trash_can = `<i class="trash outline icon link poms_tag" id="${cids}_${tag_id}"></i></span>`;
+                    $('#tag_container').append(new_tag + new_trash_can);
                     //$('#tag_container').append(new_tag);
                     add_click_handler();
                 }
