--- a/webservice/templates/show_campaigns.html
+++ b/webservice/templates/show_campaigns.html
@@ -208,10 +208,10 @@ Campaign Stages{%include 'help_button.html'%}
                 var campaigns_tags_composite_key = data.campaign_id.toString().replace(/,/g, 'c') + "_" + data.tag_id.toString();
                 $('#response').html(data.msg);
 
-                var new_tag = `<a href="{{pomspath}}/search_tags?q=${data.tag_name}" class="ui blue tag label" id="${campaigns_tags_composite_key}_">${data.tag_name}</a>`;
-                var new_trash_can = `<i class="trash outline icon link poms_tag" id="${campaigns_tags_composite_key}"></i>`;
-                $('#tag_container').append(new_trash_can);
-                $('#tag_container').append(new_tag);
+                const new_tag = `<span><a href="{{pomspath}}/search_tags?q=${tag_name}" class="ui blue tag label" id="${cids}_${tag_id}_">${tag_name}</a>`;
+                const new_trash_can = `<i class="trash outline bordered inverted blue icon link poms_tag" id="${cids}_${tag_id}" style="border-radius: 5px;"></i></span>`;
+                $('#tag_container').append(new_tag + new_trash_can);
+                //$('#tag_container').append(new_tag);
                 $('#tag_field').val("");
                 add_click_handler();
             }
@@ -249,7 +249,7 @@ Campaign Stages{%include 'help_button.html'%}
                     const [tag_id, tag_name] = tag
                     const cids = csv.join('c')
                     const new_tag = `<span><a href="{{pomspath}}/search_tags?q=${tag_name}" class="ui blue tag label" id="${cids}_${tag_id}_">${tag_name}</a>`;
-                    const new_trash_can = `<i class="trash outline bordered inverted blue icon link poms_tag" id="${cids}_${tag_id}" style="border-radius: 5px; margin-right: 5px;"></i></span>`;
+                    const new_trash_can = `<i class="trash outline bordered inverted blue icon link poms_tag" id="${cids}_${tag_id}" style="border-radius: 5px;"></i></span>`;
                     $('#tag_container').append(new_tag + new_trash_can);
                     //$('#tag_container').append(new_tag);
                     add_click_handler();
