--- a/webservice/templates/show_campaigns.html
+++ b/webservice/templates/show_campaigns.html
@@ -241,7 +241,7 @@ Campaign Stages{%include 'help_button.html'%}
         console.log("csv="+csv);
         $("#tag_campaign_ids").val(csv.join(','))
 
-        $('#tag_container').html('<i class="spinner loading blue icon"></i>');
+        $('#tag_container').html('<i class="big spinner loading blue icon"></i>');
         $.getJSON('search_all_tags?cl='+csv.join(','), function (data) {
             if (data.msg == "OK") {
                 $('#tag_container').html('');
