--- a/webservice/templates/campaign_info.html
+++ b/webservice/templates/campaign_info.html
@@ -210,70 +210,70 @@ $( document ).ready(function() {
     <div class="ui segment raised">
          <h3>Actions</h3>
          <div class=menu>
-	      <div class=item>
-	       <a href="{{pomspath}}/jobs_eff_histo?campaign_id={{Campaign.campaign_id}}&tmax={{tmaxs}}&tdays=30">
-		   <i class="external bar chart icon" data-content="Campaign Jobs Efficiency" data-variation="basic"></i>Job Efficiency Histogram (1 month)
-	       </a>
-	      </div>
-	      <div class=item>
-	       <a href="{{pomspath}}/jobs_time_histo?timetype=wall_time&campaign_id={{Campaign.campaign_id}}&tmax={{tmaxs}}&tdays=30">
-		   <i class="external bar chart icon" data-content="Campaign Jobs Efficiency" data-variation="basic"></i>Job Wall Clock Time Histogram (1 month)
-	       </a>
+              <div class=item>
+               <a href="{{pomspath}}/jobs_eff_histo?campaign_id={{Campaign.campaign_id}}&tmax={{tmaxs}}&tdays=30">
+                   <i class="external bar chart icon" data-content="Campaign Jobs Efficiency" data-variation="basic"></i>Job Efficiency Histogram (1 month)
+               </a>
               </div>
-	      <div class=item>
-	       <a href="{{pomspath}}/jobs_time_histo?timetype=cpu_time&campaign_id={{Campaign.campaign_id}}&tmax={{tmaxs}}&tdays=30">
-		   <i class="external bar chart icon" data-content="Campaign Jobs Efficiency" data-variation="basic"></i>Job CPU Time Histogram (1 month)
-	       </a>
+              <div class=item>
+               <a href="{{pomspath}}/jobs_time_histo?timetype=wall_time&campaign_id={{Campaign.campaign_id}}&tmax={{tmaxs}}&tdays=30">
+                   <i class="external bar chart icon" data-content="Campaign Jobs Efficiency" data-variation="basic"></i>Job Wall Clock Time Histogram (1 month)
+               </a>
               </div>
-	      <div class=item>
-	       <a href="{{pomspath}}/jobs_time_histo?timetype=copy_in_time&campaign_id={{Campaign.campaign_id}}&tmax={{tmaxs}}&tdays=30">
-		   <i class="external bar chart icon" data-content="Campaign Jobs Efficiency" data-variation="basic"></i>Copy In Time Histogram (1 month)
-	       </a>
+              <div class=item>
+               <a href="{{pomspath}}/jobs_time_histo?timetype=cpu_time&campaign_id={{Campaign.campaign_id}}&tmax={{tmaxs}}&tdays=30">
+                   <i class="external bar chart icon" data-content="Campaign Jobs Efficiency" data-variation="basic"></i>Job CPU Time Histogram (1 month)
+               </a>
               </div>
-	      <div class=item>
-	       <a href="{{pomspath}}/jobs_time_histo?timetype=copy_out_time&campaign_id={{Campaign.campaign_id}}&tmax={{tmaxs}}&tdays=30">
-		   <i class="external bar chart icon" data-content="Campaign Jobs Efficiency" data-variation="basic"></i>Job Copy Out Time Histogram
-	       </a>
+              <div class=item>
+               <a href="{{pomspath}}/jobs_time_histo?timetype=copy_in_time&campaign_id={{Campaign.campaign_id}}&tmax={{tmaxs}}&tdays=30">
+                   <i class="external bar chart icon" data-content="Campaign Jobs Efficiency" data-variation="basic"></i>Copy In Time Histogram (1 month)
+               </a>
               </div>
-	      <div class=item>
-	       <a href="{{pomspath}}/campaign_sheet?campaign_id={{Campaign.campaign_id}}&tdays=7">
-		<i class="external table icon" data-content="Campaign Spreadsheet" data-variation="basic"></i>Day by Day Spreadsheet (1wk)
-	       </a>
-	      </div>
-	      <div class=item>
-	      <a href="{{pomspath}}/campaign_time_bars?campaign_id={{Campaign.campaign_id}}&tdays=7">
-		<i class="external tasks icon" data-content="Submissions for Campaign Time Bars (1wk)" data-variation="basic"></i>Submission Time Bars (1wk)
-	      </a>
-	      </div>
-	      <div class=item>
-		<a href="{{pomspath}}/campaign_task_files?campaign_id={{Campaign.campaign_id}}"><i class="external file icon" data-content="List file statistics for Submissions for Campaign" data-variation="basic"></i>Campaign Submission Files</a>
-	      </div>
-	      <div class=item>
-		<a href="{{pomspath}}/launch_jobs?campaign_id={{Campaign.campaign_id}}"><i class="external rocket icon" data-content="Immediately Launch Submissions for Campaign" data-variation="basic"></i>Launch Campaign Jobs Now</a>
-	      </div>
-	      <div class=item>
-		<a href="{{pomspath}}/kill_jobs?campaign_id={{Campaign.campaign_id}}"><i class="external trash icon" data-content="Kill jobs in Campaign" data-variation="basic"></i>Kill Jobs for Campaign</a>
-	       </div>
-	      <div class=item>
-	      <a href="{{pomspath}}/schedule_launch?campaign_id={{Campaign.campaign_id}}">
-		 <i class="external calendar icon" data-content="Schedule Future Launches" data-variation="basic"></i>Schedule Future Job Launches
-	      </a>
-	      </div>
-	      <div class=item>
+              <div class=item>
+               <a href="{{pomspath}}/jobs_time_histo?timetype=copy_out_time&campaign_id={{Campaign.campaign_id}}&tmax={{tmaxs}}&tdays=30">
+                   <i class="external bar chart icon" data-content="Campaign Jobs Efficiency" data-variation="basic"></i>Job Copy Out Time Histogram
+               </a>
+              </div>
+              <div class=item>
+               <a href="{{pomspath}}/campaign_sheet?campaign_id={{Campaign.campaign_id}}&tdays=7">
+                <i class="external table icon" data-content="Campaign Spreadsheet" data-variation="basic"></i>Day by Day Spreadsheet (1wk)
+               </a>
+              </div>
+              <div class=item>
+              <a href="{{pomspath}}/campaign_time_bars?campaign_id={{Campaign.campaign_id}}&tdays=7">
+                <i class="external tasks icon" data-content="Submissions for Campaign Time Bars (1wk)" data-variation="basic"></i>Submission Time Bars (1wk)
+              </a>
+              </div>
+              <div class=item>
+                <a href="{{pomspath}}/campaign_task_files?campaign_id={{Campaign.campaign_id}}"><i class="external file icon" data-content="List file statistics for Submissions for Campaign" data-variation="basic"></i>Campaign Submission Files</a>
+              </div>
+              <div class=item>
+                <a href="{{pomspath}}/launch_jobs?campaign_id={{Campaign.campaign_id}}"><i class="external rocket icon" data-content="Immediately Launch Submissions for Campaign" data-variation="basic"></i>Launch Campaign Jobs Now</a>
+              </div>
+              <div class=item>
+                <a href="{{pomspath}}/kill_jobs?campaign_id={{Campaign.campaign_id}}"><i class="external trash icon" data-content="Kill jobs in Campaign" data-variation="basic"></i>Kill Jobs for Campaign</a>
+               </div>
+              <div class=item>
+              <a href="{{pomspath}}/schedule_launch?campaign_id={{Campaign.campaign_id}}">
+                 <i class="external calendar icon" data-content="Schedule Future Launches" data-variation="basic"></i>Schedule Future Job Launches
+              </a>
+              </div>
+              <div class=item>
               {% if Campaign.active %}
-	      <a href="{{pomspath}}/mark_campaign_active?campaign_id={{Campaign.campaign_id}}&is_active=False">
-		 <i class="external hide icon" data-content="Mark Campaign Inactive" data-variation="basic"></i>Mark Campaign Inactive
-	      </a>
+              <a href="{{pomspath}}/mark_campaign_active?campaign_id={{Campaign.campaign_id}}&is_active=False">
+                 <i class="external hide icon" data-content="Mark Campaign Inactive" data-variation="basic"></i>Mark Campaign Inactive
+              </a>
               {% else %}
-	      <a href="{{pomspath}}/mark_campaign_active?campaign_id={{Campaign.campaign_id}}&is_active=True">
-		 <i class="external unhide icon" data-content="Mark Campaign Active" data-variation="basic"></i>Mark Campaign Active
-	      </a>
+              <a href="{{pomspath}}/mark_campaign_active?campaign_id={{Campaign.campaign_id}}&is_active=True">
+                 <i class="external unhide icon" data-content="Mark Campaign Active" data-variation="basic"></i>Mark Campaign Active
+              </a>
               {% endif %}
-	      </div>
-	      <div class=item>
+              </div>
+              <div class=item>
                  <i class="external icon"></i>
                  <a href="{{kibana_link}}" target='_blank'>Kibana Usage Info for Campaign</a>
-	      </div>
+              </div>
           </div> <!-- class=menu -->
      </div>  <!-- class=ui segment raised -->
 
@@ -337,30 +337,32 @@ $( document ).ready(function() {
 
 
     <div class="ui segment raised ">
-	<h3>Tags</h3>
+        <h3>Tags</h3>
 
-	<div class="ui search">
-	    <div class="ui left icon input">
-	       <input type="text" id="tag_field" name="tag" placeholder="Enter tag" class="prompt">
-	       <i class="tag icon"></i>
-	    </div>
+        <div class="ui search">
+            <div class="ui left icon input">
+               <input type="text" id="tag_field" name="tag" placeholder="Enter tag" class="prompt">
+               <i class="tag icon"></i>
+            </div>
 
-	    <button class="ui icon small blue button" id="add_button">
-	      <i class="plus icon"></i>
-	    </button>
-	    <div id="response" style="display:inline; vertical-align: bottom; font-style: italic;"></div>
+            <button class="ui icon small blue button" id="add_button">
+              <i class="plus icon"></i>
+            </button>
+            <div id="response" style="display:inline; vertical-align: bottom; font-style: italic;"></div>
 
-	    <div class="results"></div>
-	</div>
+            <div class="results"></div>
+        </div>
 
 
-	<div id="tag_container">
-	{% for tag in tags %}
-	    <i class="trash outline icon link poms_tag" id="{{Campaign.campaign_id}}_{{tag.tag_id}}"></i>
-	    <a href="{{pomspath}}/search_tags?q={{tag.tag_name}}" class="ui blue tag label" id="{{Campaign.campaign_id}}_{{tag.tag_id}}_">{{tag.tag_name}}</a>
-	<!--    <br/></br>   -->
-	{% endfor %}
-	</div>
+        <div id="tag_container">
+    {% for tag in tags %}
+        <span>
+            <a href="{{pomspath}}/search_tags?q={{tag.tag_name}}" class="ui blue tag label" id="{{Campaign.campaign_id}}_{{tag.tag_id}}_">{{tag.tag_name}}</a>
+            <i class="trash outline bordered inverted blue icon link poms_tag" id="{{Campaign.campaign_id}}_{{tag.tag_id}}"></i>
+        </span>
+        <!--    <br/></br>   -->
+    {% endfor %}
+        </div>
 
     </div>
 
