add call for reset_campaign_split

--- a/webservice/templates/campaign_info.html
+++ b/webservice/templates/campaign_info.html
@@ -292,7 +292,7 @@ $( document ).ready(function() {
     <b>Param Overrides</b>: {{Campaign.param_overrides}}<br>
     <b>cs_split_type</b>: {{Campaign.cs_split_type}}<br>
     <b>cs_split_dimensions</b>: {{Campaign.cs_split_dimensions}}<br>
-    <b>cs_last_split</b>: {{Campaign.cs_last_split}}<br>
+    <b>cs_last_split</b>: {{Campaign.cs_last_split}} <a href="{{pomspath}}/reset_campaign_split?campaign_id=Campaign.campaign_id">Reset</a><br>
     <b>Active</b>: {{Campaign.active}} <br>
     <b>Created</b>: {{Campaign.created}}<br>
     <b>Creator</b>: {{Campaign_info.Experimenter.username}}</br>
