--- a/webservice/templates/campaign_time_bars.html
+++ b/webservice/templates/campaign_time_bars.html
@@ -42,7 +42,8 @@ POMS:Campaign {{name}}
        <div class="right floated right aligned six wide column tmax"></div>
      </div>
 
-     {% for id,plist in blob.pmap|dictsort %}
+     <!-- { % for id,plist in blob.pmap|dictsort % } -->
+     {% for id,plist in blob.pmap.items() %}
          {% if plist|length > 0 %}
 
                <div class='row' style='margin:0px 0px; padding:0px 0px;'>
