also make tag view go to last activity

--- a/webservice/templates/show_tags.html
+++ b/webservice/templates/show_tags.html
@@ -29,7 +29,7 @@ Campaign Tags:
    <a href="{{pomspath}}/campaign_deps?tag={{t.tag_name}}"><i class="sitemap icon"></i>Dependencies</a>, 
     </button>
     <button>
-   <a href="{{pomspath}}/campaign_time_bars?tag={{t.tag_name}}"><i class="tasks icon"></i>Submissions</a>
+   <a href="{{pomspath}}/campaign_time_bars?tag={{t.tag_name}}&tdays=7&tmax={{last_activity}}"><i class="tasks icon"></i>Submissions</a>
     </button>
 {% endfor %}
 </ul>
