--- a/webservice/templates/campaign_info.html
+++ b/webservice/templates/campaign_info.html
@@ -205,9 +205,8 @@ $( document ).ready(function() {
   </div>
 
   <div class="ui horizontal segments">
-
     <div class="ui segment raised">
-         <h3>Actions</h3>
+         <h3>Reports/Status</h3>
          <div class=menu>
               <div class=item>
                <a href="{{pomspath}}/jobs_eff_histo?campaign_id={{Campaign.campaign_id}}&tmax={{last_activity}}&tdays=30">
@@ -248,6 +247,19 @@ $( document ).ready(function() {
                 <a href="{{pomspath}}/campaign_task_files?campaign_id={{Campaign.campaign_id}}&tmax={{last_activity}}"><i class="external file icon" data-content="List file statistics for Submissions for Campaign" data-variation="basic"></i>Campaign Submission Files</a>
               </div>
               <div class=item>
+                 <i class="external icon"></i>
+                 <a href="{{kibana_link}}" target='_blank'>Kibana Usage Info for Campaign</a>
+              </div>
+          </div> <!-- class=menu -->
+    </div>
+    <div class="ui segment raised">
+         <h3>Actions</h3>
+         <div class=menu>
+              <div class=item>
+                <a href="{{pomspath}}/campaign_edit?jump_to_campaign={{Campaign.campaign_id}}"><i class="external edit icon" data-content="Edit Campaign" data-variation="basic"></i>Edit Campaign</a>
+               </div>
+
+              <div class=item>
                 <a href="{{pomspath}}/launch_jobs?campaign_id={{Campaign.campaign_id}}"><i class="external rocket icon" data-content="Immediately Launch Submissions for Campaign" data-variation="basic"></i>Launch Campaign Jobs Now</a>
               </div>
               <div class=item>
@@ -256,6 +268,7 @@ $( document ).ready(function() {
               <div class=item>
                 <a href="{{pomspath}}/kill_jobs?campaign_id={{Campaign.campaign_id}}&act=hold"><i class="external pause icon" data-content="Hold running/idle jobs in Campaign" data-variation="basic"></i>Hold running/idle Jobs for Campaign</a>
                </div>
+
               <div class=item>
                 <a href="{{pomspath}}/kill_jobs?campaign_id={{Campaign.campaign_id}}"><i class="external play icon" data-content="Release held jobs in Campaign" data-variation="basic"></i>Release held  Jobs for Campaign</a>
                </div>
@@ -275,13 +288,8 @@ $( document ).ready(function() {
               </a>
               {% endif %}
               </div>
-              <div class=item>
-                 <i class="external icon"></i>
-                 <a href="{{kibana_link}}" target='_blank'>Kibana Usage Info for Campaign</a>
-              </div>
           </div> <!-- class=menu -->
-     </div>  <!-- class=ui segment raised -->
-
+   </div>  <!-- class=ui segment raised -->
    <div class="ui segment raised">
     <h3>Campaign</h3>
     <b>Name</b>: {{Campaign.name}}<br>
@@ -319,8 +327,8 @@ $( document ).ready(function() {
     <b>
     </div>
    <div class="ui segment raised">
-    Dependencies
-    <div style="width:100%; height: 40em; border: 1px solid grey; padding: 1em; overflow-x:scroll; overflow-y: scroll">
+    Immediate Dependencies
+    <div style="width:100%; height: 20em; border: 1px solid grey; padding: 1em; overflow-x:scroll; overflow-y: scroll">
       <svg style="width:200%; height: 300em ">
       {{dep_svg}}
       </svg>
